added basic interfaces
