# Checkout/docs/swagger.yaml
@@ -1,11 +1,103 @@
 basePath: /
+definitions:
+  api.ApiResponseWithErr:
+    properties:
+      error:
+        type: string
+    type: object
+  api.ApplyRewardRequest:
+    properties:
+      order_id:
+        type: integer
+      rewards:
+        type: integer
+    type: object
+  api.PayRequest:
+    properties:
+      order_id:
+        type: integer
+    type: object
 host: localhost:7451
 info:
   contact: {}
   description: This is checkout service.
   title: Checkout Api
   version: "1.0"
-paths: {}
+paths:
+  /checkout/{cart_id}:
+    post:
+      parameters:
+      - description: cart_id
+        in: path
+        name: cart_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ApiResponseWithErr'
+      summary: Start Checkout.
+      tags:
+      - Checkout
+  /order/{order_id}:
+    get:
+      parameters:
+      - description: order_id
+        in: path
+        name: order_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ApiResponseWithErr'
+      summary: Get Order .
+      tags:
+      - Checkout
+  /pay:
+    post:
+      parameters:
+      - description: pay & confirm order input
+        in: body
+        name: pay
+        required: true
+        schema:
+          $ref: '#/definitions/api.PayRequest'
+      responses:
+        "200":
+          description: ""
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ApiResponseWithErr'
+      summary: Pay Order price.
+      tags:
+      - Checkout
+  /rewards:
+    put:
+      parameters:
+      - description: apply reward input
+        in: body
+        name: applyReward
+        required: true
+        schema:
+          $ref: '#/definitions/api.ApplyRewardRequest'
+      responses:
+        "200":
+          description: ""
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ApiResponseWithErr'
+      summary: Apply Reward on Order.
+      tags:
+      - Checkout
 securityDefinitions:
   ApiKeyAuth:
     in: header
