# Checkout/internal/api/entity.go
@@ -1,0 +1,10 @@
+package api
+
+type ApplyRewardRequest struct {
+	OrderID int `json:"order_id,omitempty"`
+	Rewards int `json:"rewards,omitempty"`
+}
+
+type PayRequest struct {
+	OrderID int `json:"order_id,omitempty"`
+}
